crates/wdl-grammar/tests/parsing/brace-command-recovery/source.errors
error: expected expression, but found `}`
  ┌─ tests/parsing/brace-command-recovery/source.wdl:7:19
  │
7 │         before ${!} after
  │                   ^ unexpected `}`

